--- a/source/less/sanny-custom.less
+++ b/source/less/sanny-custom.less
@@ -1,6 +1,23 @@
 .sanny-header{
     #gradient > .radial(@wisteria,lighten(@wisteria,20%));
-    height: 300px;
+    padding:30px;
+    height: auto;
+    
+    .year{
+        position:absolute;
+        top:0;
+        
+        background: #fff;
+        border-radius: 50px;
+        padding:20px 10px;
+        border:1px solid lighten(#000,40%);
+    }
+    .year span{
+        //text-align:center;
+        vertical-align: middle;
+        font-weight: bold;
+        font-size:24px;
+    }
 
     img{
         display: block;
